--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     <div class="buttons">
       <a href="/projects" class="btn btn-1">Browse Projects</a>
       
-      <a href="/data/Resume - Nour Fares.pdf" class="btn btn-2" download="NourFaresResume.pdf">Download My Resume</a>
+      <a href="/data/Resume - Nour Fares.pdf" class="btn btn-2" download="Resume - Nour Fares.pdff">Download My Resume</a>
       
     </div>
     
