--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -23,7 +23,7 @@
         <div class="contact">
           <a class="nav-link active" class="nav-link" href="https://github.com/Nourfaress" target="_blank" type="button"><i class="fa-brands fa-square-github fa-3x"></i></a>
           <a class="nav-link" href="https://www.linkedin.com/in/nour-fares-099528201/" target="_blank" type="button"><i class="fa-brands fa-linkedin fa-3x"></i></a>
-          <a class="nav-link" href="https://wa.me/+201141400652" target="_blank"><i class="fa-brands fa-square-whatsapp fa-3x"></i></a>
+          <a class="nav-link" href="https://wa.me/0201141400652" target="_blank"><i class="fa-brands fa-square-whatsapp fa-3x"></i></a>
           <a class="nav-link" href="https://www.behance.net/nourfares1" target="_blank" type="button"><i class="fa-brands fa-square-behance fa-3x"></i></a>
           <a class="nav-link" href="https://twitter.com/Nourfarres" target="_blank" type="button"><i class="fa-brands fa-square-twitter fa-3x"></i></a>
         </div>
