--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     <div class="buttons">
       <a href="/projects" class="btn btn-1">Browse Projects</a>
       
-      <a href="/data/Resume - Nour Fares.pdf" class="btn btn-2" download >Download My Resume</a>
+      <a href="https://drive.google.com/file/d/1fEaraNU16cspT3X-Ckl2VaYn5GBKg2EL/view?usp=sharing" class="btn btn-2" download="" target="_blank">Download My Resume</a>
       
     </div>
     
